fixed the project card so they dont overlap

--- a/src/app/projects-page/projects-page.component.css
+++ b/src/app/projects-page/projects-page.component.css
@@ -134,7 +134,7 @@ body {
     scroll-padding: 50px;
     padding: 2em;
     height: 100vh;
-    margin-bottom: 8%;
+    margin-bottom: 15em;
 }
 
 .project-card {
